# quantpng

./: BUILD_FIXES.md  BUILD_SIMPLE.md  GitHub_Actions_构建说明.md  PNG_压缩颜色问题分析.md  QUICKSTART.md  README.md  README_跨平台构建方案.md  Windows_构建问题修复说明.md  Windows_链接库问题修复.md  test_build.sh  test_build_clean.sh  test_build_fixed.sh  test_windows_fix.sh
.github/workflows/: build-cross-platform.yml  build-dynamic-libs.yml  build-libs.yml  quick-build-new.yml  quick-build.yml  simple-build.yml
imagequant/: App.java  使用说明.txt
imagequant-sys/: Cargo.toml
imagequant/org/ugirls/: App.java
jna-wrapper/: CMakeLists.txt  Makefile  README.md  SimpleJNATest.java  build.sh  build_cross_platform.sh  test_java.sh
jna-wrapper/include/: jna_wrapper.h
jna-wrapper/java/org/pngquant/jna/: LibImageQuantJNA.java  PngQuantJNA.java
jna-wrapper/maven-test/: pom.xml
jna-wrapper/maven-test/src/main/java/org/pngquant/jna/: ColorOrderDebugger.java  CompressionAnalyzer.java  MultiThreadPngCompressor.java  PngCompressor.java
jna-wrapper/src/: jna_wrapper.c
jna-wrapper/test/: JNAWrapperTest.java  test_basic.c
